# CS3102-project

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  todo.md
docs/report/: latexmkrc  main.bib  main.tex  preamble.tex
docs/report/sec/: 0_abstract.tex  1_intro.tex  2_related_work.tex  3_methodology.tex  4_experiments.tex  5_results.tex  6_conclusion.tex
scripts/: Contibutions.go  classification.py  clustering.py  download_data.sh  regression.py  risk_assessment.py  run_eda_feature_eng.py  setup_database.sh
src/: __init__.py  data_loading.py  ml.py  ml_project.py  mlphase2.py  preprocessing.py  utils.py
src/classification/: __init__.py  data_preparation.py  evaluation.py  models.py  orchestrator.py  tuning.py
src/clustering/: __init__.py  algorithms.py  evaluation.py  label_processing.py  orchestrator.py  visualization.py
src/eda/: __init__.py  statistics.py  visualization.py
src/feature_engineering/: __init__.py  dimensionality_reduction.py  visualization.py  window_statistics.py
src/regression/: __init__.py  data_preparation.py  evaluation.py  models.py  orchestrator.py  tuning.py
src/risk_assessment/: __init__.py  calculation.py  data_preparation.py  decision.py  orchestrator.py  visualization.py
